--- a/src/pages/clientes.html
+++ b/src/pages/clientes.html
@@ -53,18 +53,18 @@
       </div>
       <div id="bodyPage">
         <img src="/public/images/fragmentolineapequena2.png" style="position: absolute;
-            top: 100px; left: 317px;" />
+            top: 100px; left: 831px;" />
         <div class="contenedores contenedorleft">
-            <h1>
-                Tecnología e</h1>
-            <h2 style="margin-top: -30px;">
-                Innovación</h2>
+            <hgroup>
+                <h1>
+                    Nuestros</h1>
+                <h2 style="margin-top: -30px;">
+                    Clientes</h2>
+            </hgroup>
             <p>
-                Sistemas de control de acceso, sistemas CCTV digital, redes y comunicaciones, diseño
-                de software, diseño web, reseller de hosting y dominios, hardware, software, redes,
-                soluciones informáticas, diseño e impresión de carnet en PVC, aplicaciones de hardware
-                y software en microprocesadores, comunicaciones digitales, mantenimientos preventivos,
-                programación, análisis y diseño de sistemas.</p>
+                A continuación, encontrara varios clientes satisfechos con nuestros servicios, además
+                podrá observar nuestra forma de trabajar y la limpeza en la instalación de nuestros
+                servicios</p>
         </div>
         <div class=" contenedores contenedorRight">
             <div id="jslidernews2" class="lof-slidecontent" style="width: 770px; height: 320px;">
@@ -78,76 +78,62 @@
                 <div class="main-slider-content" style="width: 684px; height: 320px;">
                     <ul class="sliders-wrap-inner">
                         <li>
-                            <img src="/public/images/thumbs/dvr.png" title="CCTV">
+                            <img src="/public/images/thumbl_980x340.png" title="Servicio 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="CCTV" href="#">CCTV</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 1</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Monitoree en tiempo real sus instalaciones... <a class="readmore" href="#">Lea Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <img src="/public/images/thumbs/disenoweb.jpg" title="Diseño Web">
+                            <img src="/public/images/thumbl_980x340_002.png" title="Newsflash 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="Diseño Web" href="#">Diseño Web</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 2</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Diseñamos su sitio web a medida... <a class="readmore" href="#">lea Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <img src="/public/images/thumbs/redes.png" title="Redes y Comunicaciones">
+                            <img src="/public/images/thumbl_980x340_002.png" title="Newsflash 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="Redes y comunicaciones" href="#">Redes y Comunicaciones</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 3</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Adecuaciones de cableado estructurado y red electrica... <a class="readmore" href="#">
-                                        lee Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <img src="/public/images/thumbs/software.jpg" title="Diseño de software">
+                            <img src="/public/images/thumbl_980x340_002.png" title="Newsflash 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="Diseño de software" href="#">Analisis y Diseño de Sistemas</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 4</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Aumente la productividad automatizando los procesos de su empresa o negocio ...
-                                    <a class="readmore" href="#">Lea Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <img src="/public/images/thumbs/carnet.jpg" title="Carnet PVC">
+                            <img src="/public/images/thumbl_980x340_002.png" title="Newsflash 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="Carnetización en PVC" href="#">Identificacion de Personal</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 5</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Diseño e impresion de carnét en PVC para el personal de su empresa... <a class="readmore"
-                                        href="#">lea Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <img src="/public/images/thumbs/reparacion.jpg" title="Mantenimientos">
+                            <img src="/public/images/thumbl_980x340_002.png" title="Newsflash 1">
                             <div class="slider-description">
                                 <div class="slider-meta">
-                                    <a target="_parent" title="Mantenimientos" href="#">Mantenimientos</a></div>
+                                    <a target="_parent" title="Servicio 1" href="#">Cliente 6</a></div>
                                 <p class="TextoDetalleSlider">
-                                    Preventivos y correctivos para hardware... <a class="readmore" href="#">Lea Más</a>
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="/public/images/thumbs/suministros.jpg" title="Suministros">
-                            <div class="slider-description">
-                                <div class="slider-meta">
-                                    <a target="_parent" title="Suministro de Equipos" href="#">Suministros</a></div>
-                                <p class="TextoDetalleSlider">
-                                    De equipos informaticos para su local, empresa o negocio... <a class="readmore" href="#">
-                                        Lea Más</a>
+                                    Algo sobre el cliente... <a class="readmore" href="#">Read more </a>
                                 </p>
                             </div>
                         </li>
@@ -159,79 +145,56 @@
                         <ul class="navigator-wrap-inner">
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/cctv.jpg" />
+                                    <img src="/public/images/lofthumbs/791902news3.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">CCTV - Circuito Cerrado de Televisión</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/diseno_web.jpg" />
+                                    <img src="/public/images/lofthumbs/435576news10.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Diseño Web a medida</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/redes.jpg" />
+                                    <img src="/public/images/lofthumbs/641906img1.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Redes Y Comunicaciones</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/software.jpg" />
+                                    <img src="/public/images/lofthumbs/416719news7.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Análisis y Diseño de software</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/carnet.png" />
+                                    <img src="/public/images/lofthumbs/641906img1.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Carnét en PVC</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img src="/public/images/lofthumbs/reparacion.jpg" />
+                                    <img src="/public/images/lofthumbs/416719news7.jpg" />
                                     <h3 class="TituloLista">
                                         McTecnia
                                     </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Mantenimiento de hardware</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                    <img src="/public/images/lofthumbs/59080123_10.jpg" />
-                                    <h3 class="TituloLista">
-                                        McTecnia
-                                    </h3>
-                                    <h4 class="marcaRegistrada">
-                                        &#174;</h4>
-                                    <span class="TextLista">Suministro de equipos</span>
+                                    <span class="TextLista">Aqui va la Descripción del servicio instalado al cliente</span>
                                 </div>
                             </li>
                         </ul>
@@ -247,7 +210,7 @@
         </div>
         <div style="clear: both;">
         </div>
-      </div>
+    </div>
       <div id="footer">
       </div>
     </div>
