add contact info

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -244,6 +244,11 @@
                     <span></span>
                 </div>
             </div>
+            <div class="box-contactenos">
+              <h3>Contactenos</h3>
+              <p style="margin-bottom: 3px;">Telefonos: <strong>321 5734173 - 300 8008382</strong></p>
+              <p style="margin-top: 3px;">Email: <a href="mailto:comercial@mctecnia.com">Comercial@mctecnia.com</a></p>
+            </div>
         </div>
         <div style="clear: both;">
         </div>
