--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Tecnología e. Innovación. Sistemas de control de acceso, sistemas CCTV digital, redes y comunicaciones, diseño de software, diseño web, reseller de hosting y domotica">
+    <meta name="author" content="McTecnia">
 
     <title>McTecnia - Soluciones Tecnologicas</title>
 
