add hreflang tag to index html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>McTecnia - Soluciones Tecnologicas</title>
 
+
+    <link rel="alternate" href="http://www.mctecnia.com/" hreflang="es" />
     <!-- Bootstrap Core CSS -->
     <link href="public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
