--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <div class="team-member">
                         <img src="public/img/team/moises-castellar.png" class="img-responsive img-circle" alt="">
                         <h4>Moises Castellar</h4>
-                        <p class="text-muted">Lider de infrastructura</p>
+                        <p class="text-muted">Lider de IT</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
