--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <title>McTecnia - Soluciones Tecnologicas</title>
 
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
   <link rel="alternate" href="http://www.mctecnia.com/" hreflang="es" />
   <!-- Bootstrap Core CSS -->
@@ -632,7 +633,7 @@
                       <h2>Sitio web avanzado</h2>
                       <p class="item-intro text-muted">Paginas con mucho contenido y/o funcionalidad.</p>
                       <img class="img-responsive img-centered" src="public/img/portfolio/escape-preview.png" alt="">
-                      <p>Si posees mucha informacion de importancia que llevar a tus clientes, esta es tu opcion, te ofrecemos diseño experto y usable para tu sitio web, con tecnologias a la vanguardia que ofrecen rapidez de carga y disponibilidad 24/7 en la web.</p>
+                      <p>Si posees mucha información de importancia que llevar a tus clientes, esta es tu opción, te ofrecemos diseño experto y usable para tu sitio web, con tecnologias a la vanguardia que ofrecen rapidez de carga y disponibilidad 24/7 en la web.</p>
                       <p>Además del desarrollo de tu sitio, te ofrecemos hosting y dominio para que no te preocupes por nada. Si requieres un correo corporativo solo contactanos!</p>
                       <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
                       <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
