--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <header>
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Expertos en tecnologia e ingenieria!</div>
-        <div class="intro-heading">Diseñamos soluciones</div>
+        <div class="intro-lead-in">Expertos en tecnología e ingeniería</div>
+        <div class="intro-heading">Soluciones tecnológicas</div>
         <a href="#services" class="page-scroll btn btn-xl">Conoce más</a>
       </div>
     </div>
@@ -92,7 +92,7 @@
           <div class="row">
               <div class="col-lg-12 text-center">
                   <h2 class="section-heading">Servicios</h2>
-                  <h3 class="section-subheading text-muted">Te ofrecemos soluciones tecnologicas y renovables <i class="fa fa-leaf"></i>.</h3>
+                  <h3 class="section-subheading text-muted">Te ofrecemos soluciones tecnológicas y renovables <i class="fa fa-leaf"></i>.</h3>
               </div>
           </div>
           <div class="row text-center">
@@ -102,7 +102,7 @@
                       <i class="fa fa-video-camera fa-stack-1x fa-inverse"></i>
                   </span>
                   <h4 class="service-heading">CCTV</h4>
-                  <p class="text-muted">Sistemas integrados de seguridad para su casa, empresa o negocio. <a href="#portfolio" class="page-scroll">Solo elija el paquete</a> y llamenos.</p>
+                  <p class="text-muted">Sistemas integrados de seguridad para su casa, empresa o negocio. <a href="#portfolio" class="page-scroll">Solo elija el paquete que prefiera</a> y llámenos.</p>
               </div>
               <div class="col-md-4">
                   <span class="fa-stack fa-4x">
@@ -110,7 +110,7 @@
                       <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                   </span>
                   <h4 class="service-heading">Diseño web</h4>
-                  <p class="text-muted">Ten presencia en el internet, diseñamos tu pagina web, atractiva, facil de usar, y a la vanguardia de la tecnologia.</p>
+                  <p class="text-muted">Ten presencia en internet, diseñamos tu página web, atractiva, fácil de usar y a la vanguardia de la tecnología.</p>
               </div>
               <div class="col-md-2"></div>
 
@@ -122,7 +122,7 @@
                     <i class="fa fa-object-group fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Redes informáticas</h4>
-                <p class="text-muted">Instalamos su Red Informática con la garantía que le puede ofrecer un instalador profesional con los conocimientos técnicos necesarios para instalar gestionar y mantener cualquier red informática.</p>
+                <p class="text-muted">Instalamos su red informática con todas las garantías y alta calidad, contamos con profesionales capacitados y con la experiencia necesaria para instalar, gestionar y mantener cualquier red informática.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
@@ -130,12 +130,10 @@
                     <i class="fa fa-leaf fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Plantas solares</h4>
-                <p class="text-muted">Instalación de sistemas de energia renovables. Obtén un hogar alimentado con el poder del sol <i class="fa fa-sun-o"></i> Energia limpia y gratis 25/7.</p>
+                <p class="text-muted">Ofrecemos instalaciones de sistemas de energía renovables. Obtén un hogar alimentado con el poder del sol, una energía limpia y gratis 24/7.</p>
             </div>
             <div class="col-md-2"></div>
-
           </div>
-
       </div>
   </section>
 
@@ -145,7 +143,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Portafolio</h2>
-          <h3 class="section-subheading text-muted">Soluciones inteligentes diseñadas para ti.</h3>
+          <h3 class="section-subheading text-muted">¡Soluciones inteligentes diseñadas para ti!</h3>
         </div>
       </div>
       <div class="row">
@@ -160,7 +158,7 @@
           </a>
             <div class="portfolio-caption">
               <h4>CCTV x 4</h4>
-              <p class="text-muted">Instalacion basica</p>
+              <p class="text-muted">Instalación básica</p>
             </div>
         </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -202,7 +200,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Sitio web sencillo</h4>
-              <p class="text-muted">Paginas web scroll vertical</p>
+              <p class="text-muted">Páginas web scroll vertical</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -216,7 +214,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Sitio web avanzado</h4>
-              <p class="text-muted">Sitios web con mucho contenido?</p>
+              <p class="text-muted">¿Necesitas un sitio con mucho contenido?</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -230,7 +228,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Kit paneles solares</h4>
-              <p class="text-muted">El poder del sol <i class="fa fa-sun-o"></i> en tus manos.</p>
+              <p class="text-muted">El poder del sol <i class="fa fa-sun-o"></i> a tu alcance.</p>
             </div>
           </div>
       </div>
@@ -323,8 +321,8 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-12 text-center">
-                  <h2 class="section-heading">Nuestro increible equipo</h2>
-                  <h3 class="section-subheading text-muted">Profesionales altamente preparados</h3>
+                  <h2 class="section-heading">Nuestro equipo de profesionales</h2>
+                  <h3 class="section-subheading text-muted">Personal altamente capacitado y con experiencia certificada.</h3>
               </div>
           </div>
           <div class="row">
@@ -332,7 +330,7 @@
                   <div class="team-member">
                       <img src="public/img/team/moises-castellar.png" class="img-responsive img-circle" alt="">
                       <h4>Moises Castellar</h4>
-                      <p class="text-muted">Lider de IT</p>
+                      <p class="text-muted">Líder de IT</p>
                       <ul class="list-inline social-buttons">
                           <li><a href="#"><i class="fa fa-twitter"></i></a>
                           </li>
@@ -347,7 +345,7 @@
                   <div class="team-member">
                       <img src="public/img/team/vilma-cuervo.png" class="img-responsive img-circle" alt="">
                       <h4>Vilma Cuervo</h4>
-                      <p class="text-muted">Lider de mercadeo</p>
+                      <p class="text-muted">Líder de mercadeo</p>
                       <ul class="list-inline social-buttons">
                           <li><a href="#"><i class="fa fa-twitter"></i></a>
                           </li>
@@ -362,7 +360,7 @@
                   <div class="team-member">
                       <img src="public/img/team/moises-cuervo2.jpg" class="img-responsive img-circle" alt="">
                       <h4>Moises Cuervo</h4>
-                      <p class="text-muted">Lider de desarrollo</p>
+                      <p class="text-muted">Líder de software</p>
                       <ul class="list-inline social-buttons">
                           <li><a href="https://twitter.com/moicuervo" target="_blank"><i class="fa fa-twitter"></i></a>
                           </li>
@@ -376,7 +374,7 @@
           </div>
           <div class="row">
               <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <p class="large text-muted">Juntos, sumamos más de 30 años de experiencia en ingenieria, y estamos altamemnte preparados para brindar soluciones a sus problemas.</p>
+                  <p class="large text-muted">Juntos sumamos más de 30 años de experiencia en ingeniería, estamos altamente preparados para brindar soluciones a sus problemas.</p>
               </div>
           </div>
       </div>
@@ -415,7 +413,7 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-12 text-center">
-                  <h2 class="section-heading">Contactanos</h2>
+                  <h2 class="section-heading">Contáctanos</h2>
                   <h3 class="section-subheading text-white">Aparta una cita con nosotros.</h3>
               </div>
           </div>
@@ -506,19 +504,19 @@
                           <div class="modal-body">
                               <!-- Project Details Go Here -->
                               <h2>Combo CCTV x 4</h2>
-                              <p class="item-intro text-muted">Combo basico de vigilancia Hogares.</p>
+                              <p class="item-intro text-muted">Combo básico de vigilancia Hogares.</p>
                               <img class="img-responsive img-centered" src="public/img/combo4.jpg" alt="">
-                              <p>Combo especial para hogares o negocios pequeños. Instalamos 4 camaras con resolución HD Dia/noche. Configuradas para que realices seguimiento a travez de tu celular o computador.</p>
+                              <p>Combo especial para hogares o negocios pequeños. Instalamos 4 camaras con resolución HD Dia/noche. Configuradas para que realices seguimiento a través de tu celular o computador.</p>
                               <p>
-                                  <strong>Facil y rapida instalación</strong> Solo se requiere de acceso a internet.</p>
+                                  <strong>Fácil y rápida instalación</strong> Solo se requiere de acceso a internet.</p>
                               <ul class="list-inline">
-                                  <li>Facil instalación</li>
+                                  <li>Fácil instalación</li>
                                   <li>Calidad de video HD</li>
                                   <li>Hogares</li>
                                   <li>Negocios Pequeños</li>
                               </ul>
                               <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                           </div>
                       </div>
                   </div>
@@ -544,10 +542,10 @@
                               <h2>Combo CCTV x 8</h2>
                               <p class="item-intro text-muted">Combo para negocios pequeños o medianos</p>
                               <img class="img-responsive img-centered" src="public/img/combo8.jpg" alt="">
-                              <p>Combo especial para negocios medianos u hogares grandes. Instalamos 8 camaras con resolución HD Dia/noche. Configuradas para que realices seguimiento a travez de tu celular o computador.</p>
+                              <p>Combo especial para negocios medianos u hogares grandes. Instalamos 8 cámaras con resolución HD Dia/noche. Configuradas para que realices seguimiento a través de tu celular o computador.</p>
                               <p>Si quieres enterarte de más, no dudes en contactarnos: </p>
                               <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                           </div>
                       </div>
                   </div>
@@ -576,7 +574,7 @@
                               <img class="img-responsive img-centered" src="public/img/cctv-custom.jpg" alt="">
                               <p>Si deseas soluciones especiales para tu hogar, negocio, conjunto residencial o edificio, no dudes en contactarnos.</p>
                               <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                           </div>
                       </div>
                   </div>
@@ -603,10 +601,10 @@
                               <h2>Sitio web sencillo</h2>
                               <p class="item-intro text-muted">Paginas web sencillas y efectivas.</p>
                               <img class="img-responsive img-centered" src="public/img/portfolio/golden-preview.png" alt="">
-                              <p>El concepto de simplicidad y una buena experiencia para los usuarios hacen de este tipo de paginas web un fuerte para cualquier negocio. Te ofrecemos el desarrollo, hosting, dominio y administración de tu sitio. Si lo requieres tambien te ofrecemos correo corporativo.</p>
-                              <p>Te garantizamos un producto de uso facil y practico. Ten presencia en la web! no te quedes en el siglo pasado, contactanos!.</p>
+                              <p>El concepto de simplicidad y una buena experiencia para los usuarios hacen de este tipo de paginas web un fuerte para cualquier negocio. Te ofrecemos el desarrollo, hosting, dominio y administración de tu sitio. Si lo requieres, tambián te ofrecemos correo corporativo.</p>
+                              <p>Te garantizamos un producto de uso fácil y practico. Ten presencia en la web! no te quedes en el siglo pasado, contáctanos!.</p>
                               <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                           </div>
                       </div>
                   </div>
@@ -633,10 +631,10 @@
                       <h2>Sitio web avanzado</h2>
                       <p class="item-intro text-muted">Paginas con mucho contenido y/o funcionalidad.</p>
                       <img class="img-responsive img-centered" src="public/img/portfolio/escape-preview.png" alt="">
-                      <p>Si posees mucha información de importancia que llevar a tus clientes, esta es tu opción, te ofrecemos diseño experto y usable para tu sitio web, con tecnologias a la vanguardia que ofrecen rapidez de carga y disponibilidad 24/7 en la web.</p>
+                      <p>Si posees mucha información de importancia que llevar a tus clientes, esta es tu opción, te ofrecemos diseño experto y usable para tu sitio web, con tecnologías a la vanguardia que ofrecen rapidez de carga y disponibilidad 24/7 en la web.</p>
                       <p>Además del desarrollo de tu sitio, te ofrecemos hosting y dominio para que no te preocupes por nada. Si requieres un correo corporativo solo contactanos!</p>
                       <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                      <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                      <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                     </div>
                   </div>
                 </div>
@@ -661,12 +659,12 @@
                           <div class="modal-body">
                               <!-- Project Details Go Here -->
                               <h2>Paneles Solares</h2>
-                              <p class="item-intro text-muted">Energia limpia y renovable en tu hogar o negocio.</p>
+                              <p class="item-intro text-muted">Energía limpia y renovable en tu hogar o negocio.</p>
                               <img class="img-responsive img-centered" src="public/img/paneles-solares.jpg" alt="">
-                              <p>Te ofrecemos soluciones innovadoras para un fluido eléctrico 100% estable, y renovable. la fuente más poderosa de energia en tu hogar o negocio.</p>
+                              <p>Te ofrecemos soluciones innovadoras para un fluido eléctrico 100% estable, y renovable. la fuente más poderosa de energía en tu hogar o negocio.</p>
                               <p><strong>No es un sueño!</strong> Contacanos y enterate de como obtenerlo.</p>
                               <p>Teléfonos: <a href="tel:3008008382">300 8008382</a> - <a href="tel:3215734173">321 5734173</a></p>
-                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contactanos </a>
+                              <a class="btn btn-primary page-scroll" href="#contact" data-dismiss="modal"> Contáctanos </a>
                           </div>
                       </div>
                   </div>
